@@ -2,12 +2,22 @@ All notable changes to this project will be documented in this file.
 
 ### UNRELEASED
   - new plugin system - fix #17
-    - new "publish on telegram" plugin: thanks @fadelkon
+    - new "publish on telegram" plugin: (thanks @fadelkon)
   - i18n refactoring
   - people can now choose the language displayed - fix #171
   - fix place "[Object]" issue - #194
   - admin could choose a custom fallback image - fix #195
   - it is now possible NOT to enter the end time of an event - fix #188
+  - Wordpress plugin now supports MU installation
+  - add nominatim / openstreetmap feature (thanks @gothos)
+  - improve event import
+  - add Apple touch icon - fix #200
+  - improve navbar layout
+  - improve event layout
+  - new hide calendar option
+  - new hide thumbs from homepage option
+  - complete oauth2 refactoring
+  - fix random restart
 
 
 ### 1.5.6 - 22 set '22
